# finance-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
deploy/: README.md
docs/: architecture-review.md  branch-protection.md  runbooks.md  (+6 more)
fin-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
fin-backend/alembic/: env.py
fin-backend/alembic/versions/: 0001_initial_schema.py  0002_production_hardening.py  0003_budget_rules.py  0003_sms_ingest.py  0003_sms_messages.py  0003_user_roles.py
fin-backend/app/: __init__.py  config.py  factory.py  main.py  main_auth.py  main_minimal.py
fin-backend/app/api/: exception_handlers.py  problem.py
fin-backend/app/api/v1/: accounts.py  admin.py  auth.py  budget_rules.py  budgets.py  goals.py  health.py  sms_ingest.py  sms_messages.py  transactions.py
fin-backend/app/auth/: __init__.py  csrf_token.py  login_throttle.py  rbac.py  session_user.py  throttle.py  wiring.py
fin-backend/app/db/: session.py
fin-backend/app/glossary_slices/: README.md  term_001.py  term_002.py  term_003.py  term_004.py  term_005.py  term_006.py  term_007.py  term_008.py  term_009.py  term_010.py  term_011.py  term_012.py  term_013.py  term_014.py  term_015.py  term_016.py  term_017.py  term_018.py  term_019.py  term_020.py  term_021.py  term_022.py  term_023.py  term_024.py  term_025.py  term_026.py  term_027.py  term_028.py  term_029.py  term_030.py  term_031.py  term_032.py  term_033.py  term_034.py  term_035.py  term_036.py  term_037.py  term_038.py  term_039.py  (+46 more)
fin-backend/app/middleware/: access_log.py  csrf.py  request_id.py  security_headers.py
fin-backend/app/models/: __init__.py  account.py  audit_event.py  budget.py  budget_rule.py  goal.py  idempotency.py  sms_ingest.py  sms_message.py  transaction.py  user.py
fin-backend/app/modules/: __init__.py
fin-backend/app/modules/accounts/: __init__.py  repository.py  schemas.py  service.py
fin-backend/app/modules/budget_rules/: backfill.py  calculation.py  explanations.py  repository.py  schemas.py  service.py
fin-backend/app/modules/budgets/: __init__.py  repository.py  schemas.py  service.py
fin-backend/app/modules/categories/: normalization.py
fin-backend/app/modules/goals/: __init__.py  calculator.py  repository.py  schemas.py  service.py
fin-backend/app/modules/sms_ingest/: parser.py  repository.py  schemas.py  service.py
fin-backend/app/modules/sms_messages/: parsers.py  repository.py  schemas.py  service.py  throttle.py
fin-backend/app/modules/transactions/: __init__.py  audit_repository.py  idempotency_repository.py  repository.py  schemas.py  service.py
fin-backend/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
fin-backend/app/schemas/: admin.py  auth.py
fin-backend/app/services/: admin_service.py  auth_service.py
fin-backend/docs/: sms-ingest.md
fin-backend/scripts/: check_postgres.py  export_openapi.py
fin-backend/tests/: conftest.py  test_app_wiring.py  test_csrf_middleware.py  test_goals_calculator.py  test_logging.py  test_login_throttle.py  test_metrics.py  test_problem_json.py  test_rbac.py  test_schemas_validation.py  test_security_headers.py  test_settings.py  test_sms_messages_api.py  test_sms_parsers.py  test_tracing.py
fin-backend/tests/fixtures/sms/: generic_credit_inr_v1_happy.json  generic_debit_inr_v1_happy.json  generic_debit_inr_v1_no_balance.json  unparsed_bank_promo.json  unparsed_otp.json  upi_spent_v1_happy.json
fin-backend/tests/integration/: conftest.py  test_auth.py  test_budget_rules_api.py  test_budget_rules_service.py  test_budgets.py  test_explain_copy.py  test_goals.py  test_rbac.py  test_transaction_balance.py
fin-backend/tests/sms_ingest/: test_api.py  test_parser.py  test_service.py
fin-backend/tests/unit/: test_budget_calculation.py  test_explanations.py
(+253 files in other folders)
