[tool.poetry]
name = "finance-backend"
version = "0.1.0"
description = "Finance modular monolith API (Python / FastAPI)"
authors = ["Vinay"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { version = "^0.32.1", extras = ["standard"] }
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
bcrypt = "^4.2.0"
python-multipart = "^0.0.17"
itsdangerous = "^2.2.0"
email-validator = "^2.2.0"
alembic = "^1.14.0"
psycopg = {version = "^3.2.0", extras = ["binary"]}
prometheus-client = "^0.21"
opentelemetry-sdk = "^1.29"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opentelemetry-exporter-otlp-proto-http = "^1.29"
redis = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4,<10.0.0"
ruff = "^0.8.4"
httpx = "^0.28"
pytest-cov = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Coverage runs by default; --cov-fail-under is a ratchet floor that prevents
# regressions. Raise it as DB-backed integration tests are added.
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=65"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/db/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
src = ["app", "tests"]
line-length = 100

[tool.ruff.lint]
# Bugbear (B) includes B008 which flags FastAPI's Depends()/Query() defaults — intentional there.
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
